# Autoreview

./: .gitattributes  .gitignore  AGENT_SESSION_CONTEXT.md  LICENSE  README.md  build_app.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: Autoreview.icns
autoreview/: __init__.py  __main__.py  cli.py  engine.py  gui.py  keychain.py  schemas.py
scripts/: make_icon.py
tests/: test_engine.py  test_schemas.py
