[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreview"
version = "0.1.0"
description = "Batch Venice AI code review → markdown report (CLI + dark GUI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Autoreview contributors" }]
keywords = ["venice", "code-review", "ai", "cli", "tkinter"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "openai>=1.40,<2",
  "certifi>=2024.2.2",
  "keyring>=25",
  "pydantic>=2,<3",
]

[project.urls]
Documentation = "https://docs.venice.ai"
Homepage = "https://github.com/chrisstampar/Autoreview"
Repository = "https://github.com/chrisstampar/Autoreview"
Issues = "https://github.com/chrisstampar/Autoreview/issues"

[project.optional-dependencies]
dev = ["pytest>=7,<9", "pytest-cov>=4", "ruff>=0.8", "pyinstaller>=6.19.0"]
gui = ["Pillow>=10"]

[project.scripts]
autoreview = "autoreview.cli:main"
autoreview-gui = "autoreview.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoreview*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
